samples/_failures_safe/1761293670_0ccbd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00281d8c.c: In function ‘main’:
./samples/SAFE/__tmp_00281d8c.c:157:21: error: expected expression at end of input
  157 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_00281d8c.c:157:21: error: too few arguments to function ‘print_matrix’
./samples/SAFE/__tmp_00281d8c.c:58:6: note: declared here
   58 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_00281d8c.c:157:21: error: expected declaration or statement at end of input
  157 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_00281d8c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00281d8c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00281d8c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00281d8c.c:157:21: error: expected declaration or statement at end of input
